Correct resume page spacing and graphics height

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -99,9 +99,10 @@ canvas {
 
 .main-section__technologies > li {
   width: fit-content;
+  font-size: 12px;
   border: solid 1px;
   border-radius: 3px;
-  padding: 6px;
+  padding: 3px 3px 3px 3px;
 }
 
 .about-me {
